--- a/Last7Days.html
+++ b/Last7Days.html
@@ -194,35 +194,36 @@
                 </a>
                 <div class="collapse navbar-collapse scrollbar" id="navbarStandard">
                     <ul class="navbar-nav" data-top-nav-dropdowns="data-top-nav-dropdowns" id="manu_ui">
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.html" role="button">Home</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link link-600 fw-medium" href="index.html" role="button">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link menu_dynamic" href="PreviousDay.html" role="button">Prev. Day</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link link-600 fw-medium menu_dynamic" href="Details.html" role="button">Details</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link menu_dynamic" href="Last7Days.html" role="button">Last 7 Days</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link link-600 fw-medium menu_dynamic" href="PreviousDay.html" role="button">Prev. Day</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link menu_dynamic" href="Last30Days.html" role="button">Last 30 Days</a>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link link-600 fw-medium menu_dynamic" href="Last30Days.html" role="button">Last 30 Days</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link menu_dynamic" href="Last60Days.html" role="button">Last 60 Days</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link link-600 fw-medium menu_dynamic" href="Last60Days.html" role="button">Last 60 Days</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link menu_dynamic" href="Last90Days.html" role="button">Last 90 Days</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link link-600 fw-medium menu_dynamic" href="Last90Days.html" role="button">Last 90 Days</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link menu_dynamic" href="Last180Days.html" role="button">Last 180 Days</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link link-600 fw-medium menu_dynamic" href="Last180Days.html" role="button">Last 180 Days</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link menu_dynamic" href="Last360Days.html" role="button">Last 360 Days</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link link-600 fw-medium menu_dynamic" href="Last360Days.html" role="button">Last 360 Days</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link menu_dynamic" href="PreviousFY.html" role="button">Prev. FY</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link link-600 fw-medium menu_dynamic" href="PreviousFY.html" role="button">Prev. FY</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link menu_dynamic" href="CurrentFY.html" role="button">Current FY</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link link-600 fw-medium menu_dynamic" href="CurrentFY.html" role="button">Current FY</a>
                         </li>
                     </ul>
                 </div>
@@ -845,7 +846,7 @@
     <script src="http://rtwelfare.club/js/St_web_GoogleChart.js"></script>
     <script src="http://rtwelfare.club/js/globalpnl.js" asp-append-version="true"></script>
     <script>
-        var pageUrl = "/";
+        var pageUrl = "/Last7Days/";
     </script>
     <script src="js/Dashboard.js"></script>
 
