--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
                 <div class="collapse navbar-collapse scrollbar desktop_nav_icon" id="navbarStandard">
                     <ul class="navbar-nav" data-top-nav-dropdowns="data-top-nav-dropdowns">
                         <li class="nav-item ">
-                            <a class="nav-link nav-click fw-medium cursor-pointer active"  data-key="All" href="index.html?key=All">Max</a>
+                            <a class="nav-link nav-click fw-medium cursor-pointer active" data-key="All" href="index.html?key=All">Max</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link nav-click fw-medium cursor-pointer"  data-key="CurrentWeek" href="index.html?key=CurrentWeek">
+                            <a class="nav-link nav-click fw-medium cursor-pointer" data-key="CurrentWeek" href="index.html?key=CurrentWeek">
                                 Curr. Week
                             </a>
                         </li>
@@ -183,8 +183,8 @@
                             </div>
                         </li>
 
-                        <li  class="nav-item">
-                            <a  class="nav-link fw-medium cursor-pointer" style="background-color: #2c7be5; color: white;" href="https://docs.google.com/forms/d/e/1FAIpQLSchRcZWV2iVaHdmhKHPhOCvEAjMz5wvKplv8k5jZ2nrG63m4Q/viewform" target="_blank">Add your PnL</a>
+                        <li class="nav-item">
+                            <a class="nav-link fw-medium cursor-pointer" style="background-color: #2c7be5; color: white;" href="https://docs.google.com/forms/d/e/1FAIpQLSchRcZWV2iVaHdmhKHPhOCvEAjMz5wvKplv8k5jZ2nrG63m4Q/viewform" target="_blank">Add your PnL</a>
                         </li>
                     </ul>
                 </div>
@@ -198,6 +198,7 @@
                                 <!--<button type="button" class="btn btn-primary ms-3" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSchRcZWV2iVaHdmhKHPhOCvEAjMz5wvKplv8k5jZ2nrG63m4Q/viewform', '_blank')">Add your PnL</button>-->
                                 <div class="row g-3 mb-3">
                                     <div class="col-md-12">
+                                        <span class="ms-3 title_date"></span>
                                         <div class="table-responsive scrollbar ms-3">
                                             <table class="table table-bordered table-striped mb-0" id="tableUsers">
                                                 <thead>
@@ -245,6 +246,7 @@
                         </div>-->
                         <div class="card-body bg-light">
                             <div class="row h-100 g-3">
+                                <span class="ms-3 title_date"></span>
                                 <div class="col-md-12">
                                     <div class="col-xxl-12 col-md-12 div-dark" id="true_nl_rows">
                                     </div>
@@ -348,6 +350,7 @@
 
     <script type="text/javascript" src="http://rtwelfare.club/js/jquery.min.js"></script>
     <script type="text/javascript" src="waitMe/waitMe.js"></script>
+    <script type="text/javascript" src="https://momentjs.com/downloads/moment.js"></script>
     <script type="text/javascript" src="http://rtwelfare.club/js/loader.js?v=KXV31S_OXfRaU7HS4GRp9l7h3PLpv7yOL0Xb0GoN6LQ"></script>
     <script src="http://rtwelfare.club/vendors/popper/popper.min.js?v=8ucXTxJthPDgUbEJm8l6Fj_xQzhADKseMtGMp5GCMHw"></script>
     <script src="http://rtwelfare.club/vendors/bootstrap/bootstrap.min.js?v=eyjjyky-rPCEaAX6qBtuAJ6QjMqu-zb5SnftmlJmTLQ"></script>
