--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                                 <!--<button type="button" class="btn btn-primary ms-3" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSchRcZWV2iVaHdmhKHPhOCvEAjMz5wvKplv8k5jZ2nrG63m4Q/viewform', '_blank')">Add your PnL</button>-->
                                 <div class="row g-3 mb-3">
                                     <div class="col-md-12">
-                                        <span class="ms-3 title_date"></span>
+                                        <span class="ms-3 fw-bold title_date"></span>
                                         <div class="table-responsive scrollbar ms-3">
                                             <table class="table table-bordered table-striped mb-0" id="tableUsers">
                                                 <thead>
@@ -246,7 +246,7 @@
                         </div>-->
                         <div class="card-body bg-light">
                             <div class="row h-100 g-3">
-                                <span class="ms-3 title_date"></span>
+                                <span class="ms-3 fw-bold title_date"></span>
                                 <div class="col-md-12">
                                     <div class="col-xxl-12 col-md-12 div-dark" id="true_nl_rows">
                                     </div>
@@ -277,7 +277,7 @@
             </div>
 
             <div class="col-5">
-                <a class="fw-bold text-800 stretched-link" href="Details.html?user=${userid}">${username}</a>
+                <a class="fw-bold stretched-link" href="Details.html?user=${userid}">${username}</a>
             </div>
             <div class="col-5">
                 <div class="sparkline_span" data-html="${barchart.toString()}"></div>
