change on index page

--- a/index.html
+++ b/index.html
@@ -233,19 +233,37 @@
 
             </nav>
             <div class="content">
-                
                 <div class="row g-3 mb-3">
                     <span class="fw-bold title_date"></span>
                 </div>
-                <div class="row g-3 mb-3" id="true_nl_rows">
+                <div class="row g-3 mb-3">
+                    <span class="">Order By</span>
+                    <div class="btn-group" role="group" aria-label="Basic radio toggle button group" style="margin-top: 0px;">
+
+                        <input type="radio" class="btn-check btn-sm" name="btnradio" id="btnpnldd" autocomplete="off" checked value="3">
+                        <label class="btn btn-outline-primary btn-sm" for="btnpnldd">PnL DD Ratio</label>
+
+                        <input type="radio" class="btn-check btn-sm" name="btnradio" id="btnwinRate" autocomplete="off" value="1">
+                        <label class="btn btn-outline-primary btn-sm" for="btnwinRate">Win Rate</label>
+
+                        <input type="radio" class="btn-check btn-sm" name="btnradio" id="btnmaxdd" autocomplete="off" value="2">
+                        <label class="btn btn-outline-primary btn-sm" for="btnmaxdd">Max DD</label>
+
+
+
+                        <input type="radio" class="btn-check btn-sm" name="btnradio" id="btnnetpnl" autocomplete="off" value="4">
+                        <label class="btn btn-outline-primary btn-sm" for="btnnetpnl">Net PnL</label>
+                    </div>
+                </div>
+                    <div class="row g-3 mb-3" id="true_nl_rows">
+
+                    </div>
+
+                    <h6 class="ms-3">The data is collected from publicly available sources especially from Zerodha Verified Pnls and Sensibull Pnls. For those who has objection on the data, please feel free to send a note to contact.mypnl AT gmail dot com. Please note that these analytics are purely used for educational purpose and there is no commercial use. We are collecting, sharing, or analyzing data, maintaining transparency, adhering to ethical standards, and respecting privacy and legal considerations here. When uncertain, seeking legal advice or guidance from relevant authorities is recommended to ensure compliance with applicable laws and regulations.</h6>
 
                 </div>
 
-                <h6 class="ms-3">The data is collected from publicly available sources especially from Zerodha Verified Pnls and Sensibull Pnls. For those who has objection on the data, please feel free to send a note to contact.mypnl AT gmail dot com. Please note that these analytics are purely used for educational purpose and there is no commercial use. We are collecting, sharing, or analyzing data, maintaining transparency, adhering to ethical standards, and respecting privacy and legal considerations here. When uncertain, seeking legal advice or guidance from relevant authorities is recommended to ensure compliance with applicable laws and regulations.</h6>
-
             </div>
-
-        </div>
     </main><!-- ===============================================-->
     <!-- ===============================================-->
     <!--    JavaScripts-->
