--- a/index_old.html
+++ b/index_old.html
@@ -448,7 +448,7 @@
     <script src="js/jquery.sparkline.js"></script>
     <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
     <script src="http://rtwelfare.club/js/jquery.tmpl.js"></script>
-    <script src="js/index.js"></script>
+    <script src="js/index_old.js"></script>
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RJ4QCZ8VQV"></script>
