working on generating image and fixed issue

--- a/Details.html
+++ b/Details.html
@@ -298,8 +298,8 @@
                             <div class="dropdown-menu dropdown-caret dropdown-menu-card border-0 mt-0" aria-labelledby="Strategies">
                                 <div class="bg-white dark__bg-1000 rounded-3 py-2">
                                     <!--<a class="nav-click dropdown-item link-600 fw-medium cursor-pointer" data-key="PreviousDay" href="index.html?key=PreviousDay">
-                    Prev. Day
-                </a>-->
+        Prev. Day
+    </a>-->
 
                                     <a class="menu_dynamic nav-click dropdown-item link-600 fw-medium cursor-pointer" data-key="Last7Days" href="Details.html?user=$userKey&key=Last7Days">
                                         7D
@@ -325,7 +325,9 @@
                                         Curr. Month
                                     </a>
 
-
+                                    <a class="nav-click dropdown-item link-600 fw-medium cursor-pointer" data-key="FY2324" href="index.html?user=$userKey&key=FY2324">
+                                        FY 2023-24
+                                    </a>
                                 </div>
                             </div>
                         </li>
@@ -354,6 +356,7 @@
                             <li><a class="dropdown-item menu_dynamic fw-medium cursor-pointer btn_data mr-1 cursor-pointer px-index-2 text-xs leading-[14px] last:mr-0 hover:underline font-semibold  text-[#707070]" data-key="PreviousFY" href="Details.html?user=$userKey&key=PreviousFY"> P. FY</a></li>
                             <li><a class="dropdown-item menu_dynamic pfw-medium cursor-pointer btn_data mr-1 cursor-pointer px-index-2 text-xs leading-[14px] last:mr-0 hover:underline font-semibold text-[#232526]" data-key="CurrentWeek" href="Details.html?user=$userKey&key=CurrentWeek">Curr. Week</a></li>
                             <li><a class="dropdown-item menu_dynamic pfw-medium cursor-pointer btn_data mr-1 cursor-pointer px-index-2 text-xs leading-[14px] last:mr-0 hover:underline font-semibold text-[#232526]" data-key="CurrentMonth" href="Details.html?user=$userKey&key=CurrentMonth">Curr. Month</a></li>
+                            <li><a class="dropdown-item menu_dynamic pfw-medium cursor-pointer btn_data mr-1 cursor-pointer px-index-2 text-xs leading-[14px] last:mr-0 hover:underline font-semibold text-[#232526]" data-key="FY2324" href="Details.html?user=$userKey&key=FY2324">FY 2023-24</a></li>
                         </ul>
                     </li>
                 </ul>
