--- a/pnl/snapshots.html
+++ b/pnl/snapshots.html
@@ -53,7 +53,7 @@
                 </div>
 
                 <div class="col-md-4 col-sm-4 text-center">
-                    <img width="100" class="btn-md" src="@Model.##avatar_url##" alt="" style="border-radius:50%;">
+                    <img width="100" class="btn-md" src="##avatar_url##" alt="" style="border-radius:50%;">
                     <p class="card-text"><strong>##name##</strong></p>
                 </div>
 
