--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
                             <div class="dropdown-menu dropdown-caret dropdown-menu-card border-0 mt-0" aria-labelledby="Strategies">
                                 <div class="bg-white dark__bg-1000 rounded-3 py-2">
                                     <!--<a class="nav-click dropdown-item link-600 fw-medium cursor-pointer" data-key="PreviousDay" href="index.html?key=PreviousDay">
-                                        Prev. Day
-                                    </a>-->
+        Prev. Day
+    </a>-->
 
                                     <a class="nav-click dropdown-item link-600 fw-medium cursor-pointer" data-key="Last7Days" href="index.html?key=Last7Days">
                                         7D
@@ -204,7 +204,9 @@
                                     <a class="nav-click dropdown-item link-600 fw-medium cursor-pointer" data-key="CurrentMonth" href="index.html?key=CurrentMonth">
                                         Curr. Month
                                     </a>
-
+                                    <a class="nav-click dropdown-item link-600 fw-medium cursor-pointer" data-key="FY2324" href="index.html?key=FY2324">
+                                        FY 2023-24
+                                    </a>
 
                                 </div>
                             </div>
@@ -237,6 +239,7 @@
                             <li><a class="dropdown-item pfw-medium cursor-pointer btn_data mr-1 cursor-pointer px-index-2 text-xs leading-[14px] last:mr-0 hover:underline font-semibold text-[#232526]" data-key="Last360Days" href="index.html?key=Last360Days">360D</a></li>
                             <li><a class="dropdown-item pfw-medium cursor-pointer btn_data mr-1 cursor-pointer px-index-2 text-xs leading-[14px] last:mr-0 hover:underline font-semibold text-[#232526]" data-key="CurrentWeek" href="index.html?key=CurrentWeek">Curr. Week</a></li>
                             <li><a class="dropdown-item pfw-medium cursor-pointer btn_data mr-1 cursor-pointer px-index-2 text-xs leading-[14px] last:mr-0 hover:underline font-semibold text-[#232526]" data-key="CurrentMonth" href="index.html?key=CurrentMonth">Curr. Month</a></li>
+                            <li><a class="dropdown-item pfw-medium cursor-pointer btn_data mr-1 cursor-pointer px-index-2 text-xs leading-[14px] last:mr-0 hover:underline font-semibold text-[#232526]" data-key="FY2324" href="index.html?key=FY2324">FY 2023-24</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -284,7 +287,7 @@
 
 
                         <div class="col-md-6 col-sm-12 g-3 text-end">
-                            <div class="btn-group" role="group" aria-label="Basic radio toggle button group" style="margin-top: 0px;">
+                            <!--<div class="btn-group" role="group" aria-label="Basic radio toggle button group" style="margin-top: 0px;">
                                 <input type="radio" class="btn-check btn-sm" name="btnradio_day" id="btnRadioDay_1" autocomplete="off" value="1">
                                 <label class="btn btn-outline-primary btn-sm" for="btnRadioDay_1">180+D</label>
 
@@ -293,7 +296,7 @@
 
                                 <input type="radio" class="btn-check btn-sm" name="btnradio_day" id="btnRadioDay_3" autocomplete="off" value="3">
                                 <label class="btn btn-outline-primary btn-sm" for="btnRadioDay_3">0-90D</label>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                 </div>
@@ -321,7 +324,7 @@
                     </div>
 
                     <div class="row col-md-6 col-sm-12 g-3 text-end">
-                        <div class="btn-group" role="group" aria-label="Basic radio toggle button group" style="margin-top: 0px;">
+                        <!--<div class="btn-group" role="group" aria-label="Basic radio toggle button group" style="margin-top: 0px;">
                             <input type="radio" class="btn-check btn-sm" name="btnradio_MobileDay" id="btnRadioMobileDay_1" autocomplete="off" value="1">
                             <label class="btn btn-outline-primary btn-sm" for="btnRadioMobileDay_1">180+D</label>
 
@@ -330,7 +333,7 @@
 
                             <input type="radio" class="btn-check btn-sm" name="btnradio_MobileDay" id="btnRadioMobileDay_3" autocomplete="off" value="3">
                             <label class="btn btn-outline-primary btn-sm" for="btnRadioMobileDay_3">0-90D</label>
-                        </div>
+                        </div>-->
                     </div>
 
 
